[gd_scene load_steps=4 format=3 uid="uid://jdyalvvp78qr"]

[ext_resource type="Theme" uid="uid://sskftnklcksg" path="res://assets/themes/default_theme.tres" id="1_ud3nx"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="2_jjftk"]
[ext_resource type="PackedScene" uid="uid://bp0kh61x22hov" path="res://scenes/background.tscn" id="3_wqsap"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ud3nx")
script = ExtResource("2_jjftk")

[node name="Background" parent="." instance=ExtResource("3_wqsap")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 32

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 156
text = "FUBAR"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"
alignment = 0

[node name="LevelSelectButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Level"
alignment = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"
alignment = 0

[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_button_mouse_entered" binds= [NodePath("%StartButton")]]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="ready" from="VBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_ready" binds= [NodePath("%StartButton")]]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/LevelSelectButton" to="." method="_on_button_mouse_entered" binds= [NodePath("%LevelSelectButton")]]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_button_mouse_entered" binds= [NodePath("%SettingsButton")]]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
